# ts_clf_event

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mkdocs.yaml  pyproject.toml
docs/output/test_results/: confusion_matrix.csv
docs/src/: CLI.md  data_pipeline.md  inference.md
docs/src/code_reference/_data/: data_processing.md  feat_eng.md  utils.md
docs/src/code_reference/inference/: inference.md
docs/src/code_reference/model/: evaluator.md  model_pipeline.md  utils.md
notebooks/: 01. EDA.ipynb  02. Data processing.ipynb  02. Intro Feature Eng.ipynb  03. Model_CV.ipynb
output/mock_inf_results/: confusion_matrix.csv
output/models/: RF_model.pkl  cv_results.pkl
output/test_results/: confusion_matrix.csv
src/ts_clf_event/: __init__.py
src/ts_clf_event/api/: app.py
src/ts_clf_event/api/models/: __init__.py  input_model.py  models.py  response_model.py
src/ts_clf_event/api/utils/: data_utils.py  utils.py
src/ts_clf_event/cli/: manager.py
src/ts_clf_event/cli/commands/: __init__.py  evaluator.py  inference.py  trainer.py
src/ts_clf_event/data_handler/: data_preprocessing.py  feat_eng.py  feat_engineering.py  utils.py
src/ts_clf_event/inference/: inference.py  mock_inference.py  mock_inference_api.py
src/ts_clf_event/model/: evaluator.py  model.py  utils.py
src/ts_clf_event/utils/: logging.py
tests/: test_data_pipeline.py  test_feat_eng.py  test_model_pipeline.py
