[project]
name = "ts-clf-event"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gbatsis", email = "gbatsis@ahedd.demokritos.gr" }
]
dependencies = [
    "mkdocs-material>=9.5.50",
    "mkdocstrings-python>=1.13.0",
    "pip>=24.3.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "nbformat>=5.10.4",
    "kaleido>=0.2.1",
    "scikit-learn==1.6.0",
    "xgboost>=2.1.3",
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ts_clf_event"]
